# image-template

./: .copier-answers.autopretty.yml  .gitmodules  README.md  README.md.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja
.github/workflows/: ci.yml.jinja  test.yml
src/: README.md.jinja  pyproject.toml.jinja  pytest.ini  pytest.ini.jinja
src/.github/workflows/: ci.yml.jinja
src/{% if pytest %}tests{% endif %}/: conftest.py.jinja  test_service.py.jinja
tests/: conftest.py  github-workflow.json  test_default_settings.py
{% if pytest %}tests{% endif %}/: conftest.py.jinja
